<resources>
    <string name="app_name">Dasyam Vinay Bhaskar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="reportName">Submit your problem</string>
    <string name="myReportName">My Reports</string>
    <string name="tourismName">Tourism</string>
    <string name="bioGraphyName">Biography</string>
    <string name="myJourneyName">My Journey</string>
    <string name="feedbackName">Feedback</string>
    <string name="countactusName">Contact Us</string>
    <string name="notificationName">Notifications</string>
    <string name="imp_contacts">Important Contacts</string>
    <string name="events">Events</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="phone">0870-2456119</string>
    <string name="emailAddress">dasyamofficial@gmail.com</string>


    <string name="language_english">Engilsh</string>

    <string name="facebook_app_id">208362062923574</string>
    <string name="fb_login_protocol_scheme">fb208362062923574</string>

    <string name="biography1">Dasyam Vinay Bhaskar ( born on 22nd November, 1969) is an Indian politician who is currently serving as a Member of Legislative Assembly from Warangal West constituency, Telangana. He is the brother of the former Sports Minister of Andhra Pradesh, Late Shri. Dasyam Pranay Bhaskar.  Dasyam Vinay Bhaskar won the Assembly elections in the year 2009 and has been serving as an MLA since.</string>

    <string name="biography2">He was born in Warangal, Telangana to Shilothri Devi and Dasyam Rangaiah, former Engineer in the Electricity Department. He received his early education from Kakatiya High School and St.Gabriel’s High School, Warangal and went on to do his Post graduation in Political Science from BR Ambedkar University. He took up politics after the demise of his brother and contested in the 1999 assembly elections as an Independent candidate and secured 37,000 votes. He contested again in the year 2004 as an Independent candidate and lost with a narrow margin of 1,500 votes.</string>

    <string name="biography3">He contested in 2009 for Assembly elections from Telangana Rastra Samiti party and got elected as the Member of The Legislative Assembly. He resigned soon after he got elected to protest against Congress government in favour of separate statehood of Telangana. He won the byelection with a huge majority of 70,000 votes in 2010.  Since then he has taken active part in the Telangana agitation movement and played a major role in the formation of the separate state. He was arrested twice for raising his voice in support of the formation of the separate state. In 2015, he was appointed as a Parliamentary Secretary for the Chief Minister’s Office. He is socially responsible and organised many awareness camps on the Effects Of Plastic and was successful in making Warangal Plastic Free. He also took special interest in organising multiple Blood Donation Camps. </string>

    <string name="journey_1986">1986</string>
    <string name="journey_1986_value">Started career with Telugu Desam Party as Division President</string>
    <string name="journey_1987">1987-1988</string>
    <string name="journey_1987_value">Worked as Telugu Desam Party city youth member</string>
    <string name="journey_1990">1990-1994</string>
    <string name="journey_1990_value">Served as District Party Youth Committee Member in Telugu Desam Party</string>
    <string name="journey_1997">1997</string>
    <string name="journey_1997_value">Went on to become District TNTUC President</string>
    <string name="journey_1998">1998</string>
    <string name="journey_1998_value">Worked as Telugu Desam Party Incharge in Hanamakonda Constituency</string>
    <string name="journey_1999">1999</string>
    <string name="journey_1999_value">Contested as an Independent candidate &amp; secured 37,000 votes</string>
    <string name="journey_2000">2000-2004</string>
    <string name="journey_2000_value">Founder of Telangana Karmika Aikya Vedika\nFormed many trade unions in organised and unorganised sectors &amp; fought for the rights of organised and unorganised labour</string>
    <string name="journey_2004">2004</string>
    <string name="journey_2004_value">Contested as an Independent candidate and secured 59,100 votes. Lost narrowly with a margin of 1,416 votes</string>
    <string name="journey_2005">2005</string>
    <string name="journey_2005_value">Joined Telangana Rashtra Samiti and participated actively in the Telangana movement</string>
    <string name="journey_2006">2006</string>
    <string name="journey_2006_value">Got elected as a Corporator from Warangal for the 37th Division\nDuring his term, he provided amenities to most of the Government schools and Orphanages\nHis Division was also recognised as a Clean and Green division</string>
    <string name="journey_2007">2007</string>
    <string name="journey_2007_value">Served as Telangana Rashtra Samiti Urban President\nTook an active part in the Telangana agitation\nWorked hard to strengthen Telangana Rashtra Samiti in Warangal (Urban)\nFormed Division Committees</string>
    <string name="journey_2009">2009</string>
    <string name="journey_2009_value">Fought for assembly elections from Telangana Rashtra Samiti and won with a Margin of 6684 votes</string>
    <string name="journey_2010">2010</string>
    <string name="journey_2010_value">Resigned from his position to protest against the Congress government in order to achieve separate statehood for Telangana </string>
    <string name="journey_2014">2010 - 2014   Telangana Movement</string>
    <string name="journey_2014_value">Participated in Chalo Assembly\n\nProtested against Andhra Pradesh Formation Day\n\nWas house arrested for protesting\n\nWas arrested twice for raising his voice in support of Telangana\n\nWorked towards providing uninterrupted power supply to farmers during which he was arrested by the Octopus squad\n\nOrganised multiple Blood Donation camps\n\nEncouraged sportsmen by conducting various sports events\n\nProvided hand wash areas and basic amenities in schools in collaboration with ASCI under the program Mana Badi Mana Badyata\n\nOrganised many awareness camps on the effects of plastic and was successful in making Warangal plastic free\n\nWas invited twice to attend the Young Leaders Summit held in Indian School of Business\n\nWas recognised as the Most Approachable MLA in united Andhra Pradesh in a survey conducted by a popular local News channel (CNN IBN)                                </string>
    <string name="journey_2015">2015</string>
    <string name="journey_2015_value">Was appointed as a Parliamentary Secretary for the Chief Minister’s office\nStrived hard to bring Warangal under Hriday and Amrit Scheme and was successful in achieving it.</string>
    <string name="tourism">We are dedicated to working towards making Warangal a tourist destination. We would appreciate it you join hands with us in making our vision a reality. Kindly fill up the suggestion form below and share your ideas with us.</string>

    //Consumer Key (API Key) rs2jjzShvGV47MidZZVlNjzAO
    //Consumer Secret (API Secret) WUcR1u1AeLhC0KRAxf3Sc3jJoPSGAaUUTvfWPJQOgLY3t9YOCS
    //Actionbar english Titles
    <string name="title_ebiography"></string>
    <string name="title_emyjourney"></string>
    <string name="title_efeedback"></string>
    <string name="title_econtact"></string>
    <string name="title_eevents"></string>
    <string name="title_etourism"></string>

    //english language strings
    <string name="english_home">Home</string>
    <string name="english_report"> Report</string>
    <string name="english_myReports">My Reports</string>
    <string name="english_tourism">Tourism</string>
    <string name="english_appname">Dasyam Vinay Bhaskar </string>
    //telugu language strings
    <string name="language_telugu">తెలుగు</string>
    <string name="telugu_home">హౕమ్</string>
    <string name="telugu_report"> రిపొర్ట్</string>
    <string name="telugu_myreports">మైరిపొర్ట్</string>
    <string name="telugu_tourism">టురిజం</string>
    <string name="telugu_appname">దాశ్యం వినయ్ బాసఽర్</string>

    //Navigation view title in telugu
    <string name="nav_biography">జీవిత చరిత్ర</string>
    <string name="nav_myjourney">నా ప్రయాణం</string>
    <string name="nav_feedback">అభిప్రాయం</string>
    <string name="nav_contactus">మమ్మల్ని సంప్రదించండి</string>
    <string name="nav_events">సంభవించేపని</string>

    //Navigation view title in English
    <string name="nav_ebiography">Biography</string>
    <string name="nav_emyjourney">My Journey</string>
    <string name="nav_efeedback">Feedback</string>
    <string name="nav_econtactus">Contact Us</string>
    <string name="nav_eevents">Events</string>






</resources>
